@@ -1,5 +1,7 @@
 2006-07-31  Sven Panne  <sven.panne@aedion.de>
 
+	* src/al_siteconfig.h: Cleaned up #ifdefs for sized integer types.
+
 	* src/al_siteconfig.h: Nuked ancient Darwin stuff.
 
 	* config-osx.h: Removed.
